# howlite

./: .gitignore  Cargo.toml  LICENSE  README.md  ast.json  build.rs  grammar.ebnf  sgconfig.yml
bigset/: Cargo.toml  test.py
bigset/src/: bitfield.rs  lib.rs  multi.rs  ops.rs  range.rs  step_range.rs  stripeset.rs
custom-lints/rules/: allocator-always-last.yml  allocator-defaults-to-global.yml  debug-statement-value.yml  debug-statement.yml
examples/: array.hlt  avg.hlt  fib.hlt  narrow-union.hlt  type-construction.hlt  utf8decode.hlt
examples/aoc/: 2024-01.hlt
howlite/: Cargo.toml
howlite-fdcs/: Cargo.toml
howlite-fdcs/src/: environment.rs  environment2.rs  integer_range.rs  lib.rs  variables.rs
howlite-fdcs/src/constraints/: add.rs  less_than.rs  mod.rs  multiply_eq_const.rs
howlite-fdcs/src/integer/: mod.rs  range.rs  set.rs
howlite-fdcs/src/test/: environment.rs  integer_range.rs  integer_set.rs  mod.rs
howlite-syntax/: Cargo.toml  build.rs  nimbleparse.toml
howlite-syntax/proptest-regressions/: string_codec.txt
howlite-syntax/proptest-regressions/test/: lexer.txt  parse.txt
howlite-syntax/src/: ast.rs  errors.rs  grammar.lalrpop  howlite.l  howlite.y  lexer.rs  lib.rs  parse.rs  span.rs  string_codec.rs  syntaxtree.rs  tokens.rs  treeslab.rs  treevec.rs
howlite-syntax/src/ast/: definitions.rs  infix.rs  literals.rs  mod.rs  prefix.rs  ty_expr.rs
howlite-syntax/src/test/: lexer.rs  mod.rs  parse.rs
howlite-syntax/src/tree/: assoc.rs  mod.rs  read.rs  write.rs
howlite-syntax/tests/pass/: comments.hlt  expr.hlt  full.hlt  func.hlt  integers.hlt  let.hlt  struct-literals.hlt  ty_decl.hlt  ty_expr.hlt
howlite-syntax/tests/pass/expr/: assign.hlt  compare.hlt  logic.hlt
howlite-typecheck/: Cargo.toml
howlite-typecheck/src/: access_path.rs  constraints.rs  construct_macros.rs  errors.rs  instantiate.rs  lib.rs  shape.rs  symbol.rs  ty_struct.rs  typetable.rs
howlite-typecheck/src/types/: late.rs  mod.rs  tyint.rs  tystruct.rs  union.rs
howlite-typecheck/src/util/: try_collect.rs
howlite/proptest-regressions/: typetree.txt
howlite/proptest-regressions/typetree/: atomic_exprs.txt  original.txt  ty.txt
howlite/src/: context.rs  errors.rs  lib.rs  symtab.rs  typetree.rs  tyreduce.rs
howlite/src/codegen/: func.rs  mod.rs  regalloc.rs  stack_state.rs
howlite/src/codegen/riscv/: asmgen.rs  mod.rs  registers.rs  scope.rs  ttcompiler.rs  value.rs
howlite/src/langctx/: lexicalctx.rs  mod.rs  scope.rs
howlite/src/typetree/: access.rs  atomic_exprs.rs  constraint.rs  constraint_term.rs  constraint_tree.rs  defs.rs  infix.rs  mod.rs  original.rs  prefix.rs  stmts.rs  test_helpers.rs  traits.rs  ty.rs
preseli/: Cargo.toml
preseli/src/: environment.rs  variables.rs
preseli/src/constraints/: add.rs  less_than.rs  mod.rs  multiply_eq_const.rs
preseli/src/integer/: mod.rs  range.rs  set.rs
preseli/src/test/: environment.rs  integer_set.rs  mod.rs
src/parser/: ast.rs  grammar.lalrpop
src/typecheck/: mod.rs  tcimpl.rs  typetree.rs
src/typecheck/types/: func.rs  mod.rs
src/util/: idvec.rs
sunstone/: Cargo.toml  README.md
sunstone/proptest-regressions/: range.txt
sunstone/src/: bitfield.rs  lib.rs  multi.rs  ops.rs  range.rs  step_range.rs  stripeset.rs
writing/01_preseli-constraint-solver/: preseli.md
writing/blog/: 01-why-pl.md  02-howlite-intro.md
writing/report/: abstract.typ  main.bib  main.typ  util.typ
writing/report/examples/: average-arbitrary.typ  average.typ  bitwise-complement.c  boolean.typ  go.typ  hedy.typ  howlite-general.typ  let.typ  narrowing-unions.typ  scalar-addition.typ  syntax-overview.typ  twos-inv.c  while-loop-narrowing.typ
writing/report/examples/index_of/: body.typ  signature.typ  typedefs.typ
writing/report/examples/typechecking/: colors.typ  full-tree.typ  reduce-1.typ  reduce-2.typ  reduce-3.typ
writing/report/snippets/: abstract.typ
writing/report/templates/: colors.typ  example.typ
writing/report/utils/: colors.deno.ts  exec-example.bun.ts
writing/slides/: main.typ
