cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "howlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = {version = "0.20.0", features = ["lexer", "unicode"] }
thiserror = { version = "1.0.56" }
logos = "0.14.0"

# cli deps
clap = { version = "4.4.8", features= ["derive"], optional = true }

# serialize/deserialize compiler structures
serde = { version = "1.0.19", features= ["derive"], optional = true }

# used for debugging the ast
serde_json = { version = "1.0.19",  optional = true }
concat-idents = "1.1.5"


[build-dependencies]
lalrpop = "0.20.0"

[features]
cli = ["dep:clap"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]

[[bin]]
name = "hltc"
required-features = ["cli"]


[[bin]]
name = "hlt-dbg-ast"
required-features = ["cli", "json"]

[profile.dev]
debug = 0
codegen-backend = "cranelift"
rustflags = ["-C", "linker=clang", "-C", "link-arg=--ld-path=/usr/bin/mold"]
