[package]
name = "howlite-syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
cfgrammar = "=0.13.7"
lrlex = "=0.13.7"
lrpar = "=0.13.7"
allocator-api2 = "*"
proptest = { version = "=1.5.0", optional = true }

[build-dependencies]
cfgrammar = "=0.13.7"
lrlex = "=0.13.7"
lrpar = "=0.13.7"

[features]
proptest = ["dep:proptest"]

[[bin]]
name = "parse"
