[package]
name = "howlite-syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
cfgrammar = "=0.13.7"
lrlex = "=0.13.7"
lrpar = "=0.13.7"
allocator-api2 = "*"
logos = "*"
proptest = { version = "=1.5.0", optional = true }
proptest-derive = { version = "*", optional = true }
unicode-properties = { version = "*", optional = true }
rand = { version = "*", optional = true }
smol_str = { version = "=0.3.2" }
smallvec = "*"

[build-dependencies]
cfgrammar = "=0.13.7"
lrlex = "=0.13.7"
lrpar = "=0.13.7"

[dev-dependencies]
proptest = { version = "=1.5.0" }
pretty_assertions = "*"

[features]
proptest = [
    "dep:proptest",
    "dep:proptest-derive",
    "dep:unicode-properties",
    "dep:rand",
]

[[bin]]
name = "parse"
