[package]
name = "howlite-syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
cfgrammar = "=0.13.7"
lrlex = "=0.13.7"
lrpar = "=0.13.7"
allocator-api2 = "*"
logos = "*"
smol_str = { version = "=0.3.2" }

# Testing dependecies
proptest = { version = "=1.5.0", optional = true }
proptest-derive = { version = "*", optional = true }
unicode-properties = { version = "*", optional = true }
rand = { version = "*", optional = true }

# Serialization
serde = { version = "=1.0.215", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }

# CLI deps
clap = { version = "=4.5.21", features = ["derive"], optional = true }

[build-dependencies]
cfgrammar = "=0.13.7"
lrlex = "=0.13.7"
lrpar = "=0.13.7"

[dev-dependencies]
proptest = { version = "=1.5.0" }
pretty_assertions = "*"

[features]
cli = [ "dep:clap" ]
serde = [ "dep:serde", "smol_str/serde", "allocator-api2/serde" ]
serde_json = [ "dep:serde_json" ]

proptest = [
    "dep:proptest",
    "dep:proptest-derive",
    "dep:unicode-properties",
    "dep:rand",
]

[[bin]]
name = "parse"
required-features = [ "cli", "serde", "serde_json" ]
