[package]
name = "howlite-typecheck"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = { version = "=1.13.2", features = ["const_generics", "const_new"] }
preseli = { path = "../preseli" }
sunstone = { path = "../sunstone" }
thiserror = "*"
miette = "=7.2.0"
num-traits = "*"
elsa = { version = "*", features = ["indexmap"] }
lazy_static = "*"
aries = { git = "https://github.com/ishehadeh/aries", branch="feat/int-type-features", features = ["i128"] }
tracing = "*"

[dev-dependencies]
tracing-test = "=0.2.5"
