[package]
name = "howlite"
version = "0.1.0"
edition = "2021"

[dependencies]
howlite-syntax = { path = "../howlite-syntax" }
howlite-typecheck = { path = "../howlite-typecheck" }
preseli = { path = "../preseli" }
sunstone = { path = "../sunstone" }
thiserror = "*"
hashbrown = "*"
bumpalo = { version = "*", features = ["boxed"] }
smallvec = "*"
slotmap = "*"

[dev-dependencies]
# used for stress-testing symbol table
rand = { version = "=0.8.5" }

[[bin]]
name = "hlt-typecheck"
