[package]
name = "preseli"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "=0.4.6"
slotmap = { version = "=1.0.7", default-features = false }
rpds = { version = "=1.1.0", default-features = false }
thiserror = { version = "*", default-features = false }
num-traits = { version = "*" }
num-integer = { version = "*" }
sunstone = { path = "../sunstone" }
