[package]
name = "sunstone"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "=0.4.3"
num-traits = "=0.2.19"
num-integer = "=0.1.46"

bumpalo = { version = "=3.16.0", features = ["collections"] }

tracing = { version = "=0.1.40" }

[dev-dependencies]
proptest = "1.5.0"
tracing-test = "0.2.5"
